docker/deployment/base/app-deployment.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: app

---


# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#writing-a-deployment-spec
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
spec:
  selector:
    matchLabels:
      app: app
  template:
    # https://kubernetes.io/docs/concepts/workloads/pods/#pod-templates
    metadata:
      labels:
        app: app
    spec:
      volumes:
      - name: assets
        persistentVolumeClaim:
          claimName: lf-project-assets
      - name: sendreceive-data
        persistentVolumeClaim:
          claimName: lfmerge-sendreceive-data
      containers:
      - name: app
        image: sillsdev/web-languageforge:latest
        imagePullPolicy: Always
        # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers
        resources:
          requests:
            memory: 110Mi
            cpu: 0.1
          limits:
            memory: 500Mi
        volumeMounts:
          - mountPath: /var/www/html/assets
            name: assets
          - mountPath: /var/lib/languageforge/lexicon/sendreceive
            name: sendreceive-data
