docker/deployment/base/db-deployment.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: db

---

# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#writing-a-deployment-spec
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
spec:
  selector:
    matchLabels:
      app: db
  strategy:
      type: Recreate
  template:
    # https://kubernetes.io/docs/concepts/workloads/pods/#pod-templates
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: mongo:6
        # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers
        livenessProbe:
          exec:
            command:
              - mongosh
              - '--quiet'
              - '--eval'
              - db.runCommand('ping')
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          requests:
            memory: 260Mi
            cpu: 0.1
          limits:
            memory: 400Mi
        volumeMounts:
        - mountPath: /data/db
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: lf-mongo-data
