docker/deployment/base/lfmerge-deployment.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lfmerge
  name: lfmerge
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: lfmerge

---

# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#writing-a-deployment-spec
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lfmerge
  name: lfmerge
spec:
  selector:
    matchLabels:
      app: lfmerge
  template:
    # https://kubernetes.io/docs/concepts/workloads/pods/#pod-templates
    metadata:
      labels:
        app: lfmerge
    spec:
      affinity:
        # need to keep this on the same pod as the app since inotify only gets notification when updates occur on the same kernel
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - app
            topologyKey: kubernetes.io/hostname
      volumes:
      - name: sendreceive-data
        persistentVolumeClaim:
          claimName: lfmerge-sendreceive-data
      containers:
      - name: lfmerge
        image: ghcr.io/sillsdev/lfmerge:latest
        imagePullPolicy: Always
        # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers
        resources:
          requests:
            memory: 120Mi
            cpu: 0.25
          limits:
            memory: 2.5Gi
        volumeMounts:
          - mountPath: /var/lib/languageforge/lexicon/sendreceive
            name: sendreceive-data
