docker/deployment/base/mail-deployment.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mail
  name: mail
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: mail
---

  # https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#writing-a-deployment-spec
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mail
  name: mail
spec:
  selector:
    matchLabels:
      app: mail
  template:
    # https://kubernetes.io/docs/concepts/workloads/pods/#pod-templates
    metadata:
      labels:
        app: mail
    spec:
      containers:
      - name: mail
        image: juanluisbaptiste/postfix:1.0.0
        # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers
        resources:
          requests:
            memory: 30Mi
            cpu: 0.1
          limits:
            memory: 100Mi
