docker/deployment/base/next-app-deployment.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: next-app
  name: next-app
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: next-app

---

# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#writing-a-deployment-spec
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: next-app
  name: next-app
spec:
  selector:
    matchLabels:
      app: next-app
  template:
    # https://kubernetes.io/docs/concepts/workloads/pods/#pod-templates
    metadata:
      labels:
        app: next-app
    spec:
      containers:
      - name: next-app
        # this image doesn't actually exist as for some reason tags were used for different image types instead of just version number.
        # this is a workaround because kustomize is designed to work with image names
        image: sillsdev/web-languageforge-next-app:latest
        imagePullPolicy: Always
        # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers
        resources:
          requests:
            memory: 100Mi
            cpu: 0.1
          limits:
            memory: 500Mi
