docker/deployment/base/next-proxy-deployment.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: languageforge-app
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: next-proxy
            port:
              number: 80
  tls:
  - hosts:
    - localhost
    secretName: languageforge-tls

---

# https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: next-proxy
  name: next-proxy
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: next-proxy

---

# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#writing-a-deployment-spec
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: next-proxy
  name: next-proxy
spec:
  selector:
    matchLabels:
      app: next-proxy
  template:
    # https://kubernetes.io/docs/concepts/workloads/pods/#pod-templates
    metadata:
      labels:
        app: next-proxy
    spec:
      containers:
      - name: next-proxy
        # this image doesn't actually exist as for some reason tags were used for different image types instead of just version number.
        # this is a workaround because kustomize is designed to work with image names
        image: sillsdev/web-languageforge-next-proxy:latest
        # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers
        imagePullPolicy: Always
        resources:
          requests:
            memory: 25Mi
            cpu: 0.1
          limits:
            memory: 75Mi
